GNOME Bugzilla – Bug 754389
Selecting items doesn't work after going to Channels and back
Last modified: 2015-09-01 10:50:03 UTC
Steps to Reproduce: 1.go to channels and back to videos 2.right click an item See https://bugzilla.redhat.com/show_bug.cgi?id=1258505
commit bb97697bdc809d161ba82bcc161fc187359121b0 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Sep 1 12:47:45 2015 +0200 grilo: Fix selection not working after visiting Channels When visiting the Channels page, we'd create a filter model, but switching back to the Videos page, we wouldn't reset it. Harden the selection request checks to check whether we're on the Channels page (and at the root of it) before refusing selection. https://bugzilla.gnome.org/show_bug.cgi?id=754389