grilo: Fix selection not working after visiting Channels

When visiting the Channels page, we'd create a filter model, but
switching back to the Videos page, we wouldn't reset it. Harden the
selection request checks to check whether we're on the Channels page
(and at the root of it) before refusing selection.

https://bugzilla.gnome.org/show_bug.cgi?id=754389